--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@next/third-parties": "^14.2.3",
     "@react-three/drei": "^9.105.6",
     "@react-three/fiber": "^8.16.6",
+    "@vercel/analytics": "^1.3.1",
     "bad-words": "^3.0.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.9",
