--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Portfolio | Shubh Porwal",
-  "short_name": "Shubh Porwal",
-  "description": "Shubh Porwal's Portfolio Website.",
+  "name": "Infinity cybertech",
+  "short_name": "Web dev",
+  "description": "Infinity cybertech is an IT firm that specializes in website and software development",
   "icons": [
     {
       "src": "/icon-192x192.png",
